test/error/ast/AssignIncompatibleType.mod
MODULE AssignIncompatibleType;
VAR i: INTEGER; r: REAL;
BEGIN
  i := r;
END AssignIncompatibleType.
